# meow-lang

./: .gitignore  BUILD_ON_WINDOWS.md  CMakeLists.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  FILE_MANIFEST.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  Product.wixobj  Product.wxs  QUICK_REFERENCE.md  README.md  START_HERE.md  build.bat  build.sh  cab1.cab  credentials.txt  docs.txt  hello.meow  meow  meow-lang.deb  meow-lang_1.0_amd64.snap  meowlang-1.0.0-windows-x64.msi  meowlang-1.0.0-windows-x64.wixpdb  test.meow
.github/workflows/: release.yml
examples/: cat.meow  factorial.meow  fibonacci.meow  hello.meow  if.meow  new.meow  primes.meow  sum_100.meow  test.meow
include/: ast.h  codegen.h  lexer.h  parser.h  token.h
installer-assets/: license.rtf
linux/snap/: snapcraft.yaml
meow-lang/DEBIAN/: control
meowlang/: .gitignore  CMakeLists.txt  ReadMe.md
meowlang/src/: bytecode.h  compiler.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp
release/Installer/: Product.wxs
scripts/: install_windows.ps1  package_linux.sh  package_windows.ps1
src/: ast.c  ast.h  codegen.c  compiler.h  lexer.c  main.c  main.cpp  parser.c  parser.h  token.c  token.cpp  token.h  vm.cpp  vm.h
